# src/main/java/com/carlosarroyoam/ecommerce/customer/entity/Customer.java
@@ -1,10 +1,18 @@
 package com.carlosarroyoam.ecommerce.customer.entity;
 
+import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.List;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -20,4 +28,36 @@ public class Customer {
   @Id
   @GeneratedValue(strategy = GenerationType.IDENTITY)
   private Long id;
+
+  @Column(name = "first_name", length = 64, nullable = false)
+  private String firstName;
+
+  @Column(name = "last_name", length = 64, nullable = false)
+  private String lastName;
+
+  @Column(name = "phone_number", length = 10, nullable = false)
+  private String phoneNumber;
+
+  @Column(name = "email", length = 64, nullable = false)
+  private String email;
+
+  @Column(name = "password_hash", length = 96, nullable = false)
+  private String passwordHash;
+
+  @Enumerated(EnumType.STRING)
+  @Column(name = "status", length = 32, nullable = false)
+  private CustomerStatus status;
+
+  @Builder.Default
+  @OneToMany(mappedBy = "customer", fetch = FetchType.LAZY)
+  private List<CustomerAddress> addresses = new ArrayList<>();
+
+  @Column(name = "created_at", nullable = false)
+  private LocalDateTime createdAt;
+
+  @Column(name = "updated_at", nullable = false)
+  private LocalDateTime updatedAt;
+
+  @Column(name = "deleted_at")
+  private LocalDateTime deletedAt;
 }
